added raw aluminium item

--- a/src/main/resources/assets/spacecraft/lang/en_us.json
+++ b/src/main/resources/assets/spacecraft/lang/en_us.json
@@ -1,3 +1,4 @@
 {
-  "item.spacecraft.aluminium": "Aluminium"
+  "item.spacecraft.aluminium": "Aluminium",
+  "item.spacecraft.raw_aluminium": "Raw dirty alumichik ;)"
 }
