--- a/src/main/resources/assets/spacecraft/lang/en_us.json
+++ b/src/main/resources/assets/spacecraft/lang/en_us.json
@@ -1,4 +1,6 @@
 {
   "item.spacecraft.aluminium": "Aluminium",
-  "item.spacecraft.raw_aluminium": "Raw dirty alumichik ;)"
+  "item.spacecraft.raw_aluminium": "Raw dirty alumichik ;)",
+
+  "creativetab.spacecraft_tab" : "Aluminium Spacecraft Tab"
 }
